[package]
name = "blackhole"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.6.1", features = [ "full" ] }
tokio-util = { version = "0.6.7", features = [ "codec" ] }
futures = "0.3.15"
bytes = "1.0.1"
